jilles      2006/10/01 18:51:45 UTC	(20061001-6593)
  Log:
  Update command_help() and command_help_short() to sourceinfo.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ircd_catserv.c (File Modified) 
  +2 -2		trunk/include/commandtree.h (File Modified) 
  +4 -6		trunk/modules/chanserv/help.c (File Modified) 
  +1 -1		trunk/modules/global/main.c (File Modified) 
  +1 -1		trunk/modules/memoserv/help.c (File Modified) 
  +2 -2		trunk/modules/nickserv/help.c (File Modified) 
  +1 -1		trunk/modules/operserv/help.c (File Modified) 
  +13 -16	trunk/src/commandtree.c (File Modified) 


jilles      2006/10/01 17:54:52 UTC	(20061001-6591)
  Log:
  Properly fix chanserv register, bug was introduced in r6517 by me.
  

  Changes:	Modified:
  +7 -1		trunk/modules/chanserv/register.c (File Modified) 


pippijn     2006/10/01 00:37:28 UTC	(20061001-6589)
  Log:
  fixed crashing bug that occurred when registering without being logged in
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/register.c (File Modified) 


jilles      2006/09/30 22:35:46 UTC	(20060930-6587)
  Log:
  Add description field to testcmd_vtable. This is used for logging.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/os_testcmd.c (File Modified) 
  +1 -0		trunk/include/sourceinfo.h (File Modified) 
  +1 -1		trunk/src/function.c (File Modified) 


jilles      2006/09/30 22:10:34 UTC	(20060930-6585)
  Log:
  Convert help_display() to sourceinfo.
  Make help_cmd_find() static.
  

  Changes:	Modified:
  +1 -3		trunk/include/commandtree.h (File Modified) 
  +1 -1		trunk/modules/chanserv/help.c (File Modified) 
  +1 -1		trunk/modules/global/main.c (File Modified) 
  +1 -1		trunk/modules/memoserv/help.c (File Modified) 
  +1 -1		trunk/modules/nickserv/help.c (File Modified) 
  +1 -1		trunk/modules/operserv/help.c (File Modified) 
  +15 -14	trunk/src/help.c (File Modified) 


jilles      2006/09/30 21:45:01 UTC	(20060930-6583)
  Log:
  src/packet.c: remove obsolete TODO comment.
  

  Changes:	Modified: